--- a/assets/index.css
+++ b/assets/index.css
@@ -56,7 +56,7 @@ nav ul li a:hover{
 /*Descripcion mia*/
 
 .descripcion{
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(182, 174, 163);
     display: flex;
     padding: 50px;
     justify-content: center;
@@ -64,18 +64,21 @@ nav ul li a:hover{
 }
 
 section div h1{
+    color: rgb(80, 45, 16);
     padding: 20px;
     font-size: 60px;
     text-transform: uppercase;
 }
 
 section div h2{
+    color: rgb(80, 45, 16);
     font-size: 30px;
     padding: 20px;
 }
 
 section div p{
     font-size: 20px;
+    color: rgb(83, 61, 44);
 }
 
 .mifoto{
@@ -96,11 +99,12 @@ section div p{
 /*Seccion de Intereses*/
 
 .intereses{
-    background-color: rgb(126, 117, 106);
+    background-color: rgb(155, 144, 129);
     
 }
 
 .intereses p{
+    color: rgb(83, 61, 44);
     font-size: 20px;
     text-align: center;
     padding-bottom: 20px;
@@ -133,10 +137,11 @@ section div p{
 /*Seccion de trabajos*/
 
 .trabajos{
-    background-color: rgb(102, 89, 73);
+    background-color: rgb(126, 114, 100);
 }
 
 .trabajos-contenedor p{
+    color: rgb(83, 61, 44);
     font-size: 20px;
     text-align: center;
     padding-bottom: 20px;
@@ -166,7 +171,7 @@ section div p{
     height: 98.5%;
     top: 0%;
     transform: scale(0);
-    background: hsla(29, 35%, 56%, 0.705);
+    background: hsla(28, 18%, 42%, 0.705);
     transition: transform .5s;
     display: flex;
     justify-content: center;
@@ -189,7 +194,7 @@ section div p{
 /*Seccion de habilidades*/
 
 .habilidades{
-    background-color: #52483b;
+    background-color: rgb(102, 90, 76);
 }
 
 .targetas{
@@ -215,7 +220,7 @@ section div p{
 /*boton para subir*/
 
 #boton{
-    background-color: #4d473f;
+    background-color: rgb(102, 90, 76);
     display: flex;
     justify-content: center;
 }
@@ -229,10 +234,11 @@ section div p{
 /*Seccion de contacto*/
 
 .contacto{
-    background-color: #52504e;
+    background-color: rgb(78, 66, 52);
 }
 
 .contacto p{    
+    color: rgb(46, 26, 10);
     font-size: 20px;
     text-align: center;
     padding-bottom: 20px;
@@ -256,8 +262,9 @@ section div p{
 }
 
 .contacto-contenedor h4{
-    color: rgb(61, 36, 6);
+    color: rgb(56, 42, 24);
     align-items: center;
+    font-size: 20px;
 
 }
 
